[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Actors/BaseEnemy.gd" type="Script" id=1]
[ext_resource path="res://assets/art/enemy/sprite_enemy_groundturret01_opening_6.png" type="Texture" id=2]
[ext_resource path="res://src/Ability/Base/BaseAbilitySystemComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/AnimationPlayer/AnimationPlayerState.gd" type="Script" id=4]
[ext_resource path="res://src/Base/Area2D_HurtBox.tscn" type="PackedScene" id=5]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="BaseEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 24
script = ExtResource( 1 )
Team_ID = 2

[node name="AbilitySystemComponent" parent="." instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 2 )
flip_h = true

[node name="ShootSocket" type="Position2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayerState" type="AnimationPlayer" parent="."]
script = ExtResource( 4 )

[node name="Area2D_HurtBox" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_HurtBox"]
shape = SubResource( 2 )
